--- a/impnotes/encoding.html
+++ b/impnotes/encoding.html
@@ -303,7 +303,7 @@
  that the other <a href="http://www.opengroup.org/onlinepubs/007904975/functions/iconv.html" target="_top"><tt class="function">iconv</tt></a> implementations are broken in various ways and
  we do not want to deal with random <a href="http://clisp.cons.org" target="_top"><span><b class="command">CLISP</b></span></a> crashes caused by those bugs.
  If your system supplies an <a href="http://www.opengroup.org/onlinepubs/007904975/functions/iconv.html" target="_top"><tt class="function">iconv</tt></a> implementation which passes the
- <a href="http://www.gnu.org" target="_top">GNU</a> <a href="http://www.gnu.org/software/libiconv/" target="_top">libiconv</a>'s test suite, please report that to <tt class="email">&lt;<a href="mailto:clisp-list/at/sf.net"><a href="http://lists.sourceforge.net/lists/listinfo/clisp-list" target="_top">clisp-list/at/sf.net</a></a>&gt;</tt> and a
+ <a href="http://www.gnu.org" target="_top">GNU</a> <a href="http://www.gnu.org/software/libiconv/" target="_top">libiconv</a>'s test suite, please report that to <tt class="email">&lt;<a href="mailto:clisp-list@sf.net">clisp-list@sf.net</a>&gt;</tt> and a
  future <a href="http://clisp.cons.org" target="_top"><span><b class="command">CLISP</b></span></a> version will use <a href="http://www.opengroup.org/onlinepubs/007904975/functions/iconv.html" target="_top"><tt class="function">iconv</tt></a> on your system.</p></dd></dl></div><p>
 
 <!--#endif /* HAVE_ICONV */-->
