--- a/impnotes/file-dict.html
+++ b/impnotes/file-dict.html
@@ -31,7 +31,7 @@
   regular files in the directory <tt class="filename">#P"/etc/"</tt>.
   If the <tt class="constant">:FULL</tt> argument is non-<a href="http://www.lisp.org/HyperSpec/Body/convar_nil.html" target="_top"><tt class="constant">NIL</tt></a>,
   additional information is returned: for each matching file you get a
-  list of at least four elements <tt class="data">(<i class="replaceable"><tt>file-pathname</tt></i>
+  list of at least four elements <tt class="sexp">(<i class="replaceable"><tt>file-pathname</tt></i>
   <i class="replaceable"><tt>file-truename</tt></i>
   <i class="replaceable"><tt>file-write-date-as-decoded-time</tt></i>
   <i class="replaceable"><tt>file-length</tt></i>)</tt>.</li></ul></div><p>
