--- a/impnotes/macros3.html
+++ b/impnotes/macros3.html
@@ -43,8 +43,8 @@ is approximately equivalent to
    (dotimes (i 10) (if (oddp i) (c0 i) (c1 i))))
 </pre></td></tr></table><p>
 
-returns two lists <tt class="data">(1 3 5 7 9)</tt> and
-<tt class="data">(0 2 4 6 8)</tt> as <a href="http://www.lisp.org/HyperSpec/Body/glo_m.html#multiple_values" target="_top">multiple values</a>.
+returns two lists <tt class="sexp">(1 3 5 7 9)</tt> and
+<tt class="sexp">(0 2 4 6 8)</tt> as <a href="http://www.lisp.org/HyperSpec/Body/glo_m.html#multiple_values" target="_top">multiple values</a>.
 </p><p><a id="with-gensyms"></a><b>Macro <tt class="function">EXT:WITH-GENSYMS</tt>. </b>Similar to its namesake from
  <a href="http://www.paulgraham.com/" target="_top">Paul Graham</a>'s book
  <a href="http://www.paulgraham.com/onlisp.html" target="_top">“<span class="quote">On
