--- a/impnotes/gfdl-addendum.html
+++ b/impnotes/gfdl-addendum.html
@@ -5,7 +5,7 @@
   your documents</th></tr><tr><td width="20%" align="left"><a accesskey="p" href="gfdl-10.html">Prev</a> </td><th width="60%" align="center">Appendix A. GNU Free Documentation License</th><td width="20%" align="right"> <a accesskey="n" href="gpl.html">Next</a></td></tr></table><hr /></div><div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h2 class="title" style="clear: both"><a id="gfdl-addendum"></a>A.12. ADDENDUM: How to use this License for
   your documents</h2></div></div><div></div></div><p>To use this License in a document you have written, include a copy
 of the License in the document and put the following copyright and
-license notices just after the title page:</p><div class="blockquote"><a id="copyright-sample"></a><blockquote class="blockquote"><div class="blockquote-title"><p><b>FDL Sample Copyright Notice</b></p></div><p>
+license notices just after the title page:</p><div class="blockquote"><a id="copyright-sample"></a><blockquote class="blockquote"><div class="blockquote-title"><p><b>Samle Invariant Sections list</b></p></div><p>
     Copyright (c)  YEAR  YOUR NAME.
     Permission is granted to copy, distribute and/or modify this document
     under the terms of the GNU Free Documentation License, Version 1.2
